
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pion_camera"
dynamic = ["version"]
description = "This module need for cv programs for drones"
requires-python = ">=3.9"
authors = [
    {name = "Michael", email = "onisoris@yandex.ru"},
]
maintainers = [
    {name = "Michael", email = "onisoris@yandex.ru"}
]
dependencies = [
    "opencv-python",
    "numpy>=1.26,<2.1",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
license = "MIT"
license-files = ["LICENSE*"]
readme = {file = "README.md", content-type = "text/markdown"}

[project.urls]
Homepage = "https://github.com/OnisOris/pion_camera"
Documentation = "https://onisoris.github.io/pion_camera"
Repository = "https://github.com/OnisOris/pion_camera.git"
Issues = "https://github.com/OnisOris/pion_camera/issues"

[project.scripts]
start_server_radxa = "server.camera_server:main"

[project.optional-dependencies]
plotting = [
    "matplotlib>=3.10.1",
    "tornado",
]

[dependency-groups]
dev = [
    "furo>=2024.8.6",
    "pre-commit>=4.2.0",
    "ruff>=0.9.10",
    "setuptools-scm>=8.3.1",
    "sphinx>=8.1.3",
    "uv>=0.6.5",
]

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.ruff.lint]
extend-select = [
  "I",
  "D205",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.cibuildwheel.environment.arm64]
NPY_BLAS_ORDER = "openblas"
NPY_LAPACK_ORDER = "openblas"

[tool.setuptools]
include-package-data = true

[tool.setuptools_scm]

